--- a/src/CoreToolset.Extensions/CoreToolset.Extensions.csproj
+++ b/src/CoreToolset.Extensions/CoreToolset.Extensions.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CoreToolset.Helpers\CoreToolset.Helpers.csproj" />
   </ItemGroup>
 
